<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/countriesCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:elevation="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/countriesImage"
            android:layout_width="96dp"
            android:layout_height="72dp"
            android:transitionName="flag"
            android:layout_margin="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/countriesName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/country_name"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/countriesImage"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/countriesTotalCases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="56dp"
            android:text="@string/total_cases"
            android:textColor="@color/colorBlue"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/countriesImage"
            app:layout_constraintTop_toBottomOf="@id/countriesName"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/countriesTotalDeaths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="56dp"
            android:text="@string/total_deaths"
            android:textColor="@color/colorRed"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/countriesTotalCases"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/countriesTotalRecovered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="56dp"
            android:text="@string/total_recovered"
            android:textColor="@color/colorGreen"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/countriesTotalDeaths"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/countriesTotalCasesCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/countriesTotalCases"
            app:layout_constraintEnd_toEndOf="@id/countriesTotalCases"
            android:text="@string/test_text"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/countriesImage"
            app:layout_constraintTop_toBottomOf="@id/countriesTotalCases"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/countriesTotalDeathsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/countriesTotalDeaths"
            app:layout_constraintEnd_toEndOf="@id/countriesTotalDeaths"
            android:text="@string/test_text"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/countriesTotalCasesCount"
            app:layout_constraintTop_toBottomOf="@id/countriesTotalDeaths" />

        <TextView
            android:id="@+id/countriesTotalRecoveredCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/countriesTotalRecovered"
            app:layout_constraintEnd_toEndOf="@id/countriesTotalRecovered"
            android:text="@string/test_text"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/countriesTotalDeathsCount"
            app:layout_constraintTop_toBottomOf="@id/countriesTotalRecovered"
            tools:ignore="SmallSp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>